<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PaymentActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar5"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/total_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="246dp"
        android:layout_marginRight="246dp"
        android:text="@string/PaymentScreenTotalAmountTextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar5" />

    <EditText
        android:id="@+id/total_amount_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="186dp"
        android:layout_marginRight="186dp"
        android:ems="10"
        android:inputType="@string/paymentScreenTotalAmountEditText"
        android:text="@string/paymentScreenTotalAmountEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_amount" />

    <TextView
        android:id="@+id/payment_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="246dp"
        android:layout_marginRight="246dp"
        android:text="@string/paymentScreenPaymentTypeTextView"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/total_amount_text" />

    <Button
        android:id="@+id/visa_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/paymentScreenVisaCardButton"
        app:layout_constraintEnd_toStartOf="@+id/master_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/payment_type" />

    <Button
        android:id="@+id/master_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PaymentScreenMasterCardButton"
        app:layout_constraintBaseline_toBaselineOf="@+id/visa_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/visa_btn" />

    <EditText
        android:id="@+id/cardholder_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PaymentScreenCardholderNameEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/visa_btn" />

    <EditText
        android:id="@+id/cardnumber_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PaymentScreenCardNumberEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardholder_text" />

    <EditText
        android:id="@+id/valid_text"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PaymentScreenValidUntilEditText"
        app:layout_constraintEnd_toStartOf="@+id/cvv_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardnumber_text" />

    <EditText
        android:id="@+id/cvv_text"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/PaymentScreenCvvEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/valid_text"
        app:layout_constraintTop_toBottomOf="@+id/cardnumber_text" />

    <Button
        android:id="@+id/pay_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/PaymentScreenPayEditText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/valid_text" />
</androidx.constraintlayout.widget.ConstraintLayout>